--- a/src/client/templates/login.html
+++ b/src/client/templates/login.html
@@ -44,13 +44,14 @@
                      <div class="form-group">
                       <label for="lg_password" class="sr-only">Xác nhận mật khẩu</label>
                       <input required type="password" ng-pattern="regPassword" class="form-control" id="lg_repassword" name="lg_repassword" ng-model="regRePassword" placeholder="xác nhận mật khẩu"  
-                      ng-class="{'input-error': registerForm.lg_repassword.$touched && registerForm.lg_repassword.$error.pattern }"  title="Xác nhận mật khấu là bắt buộc">
+                      ng-class="{'input-error': (registerForm.lg_repassword.$touched && registerForm.lg_repassword.$error.pattern) ||
+                      (registerForm.lg_repassword.$touched && registerForm.lg_repassword.$invalid) }"  title="Xác nhận mật khấu là bắt buộc">
                     </div>
                     <div class="form-group">
                       <label for="lg_username" class="sr-only">Họ tên</label>
                       <input required type="text" class="form-control" id="lg_fullrname" name="lg_fullname" ng-model="regFullname" placeholder="họ tên" maxlength="30" 
-                      ng-class="{'input-error': registerForm.lg_fullname.$touched && registerForm.lg_fullname.$invalid }"
-                       title="Tên đăng nhập là bắt buộc">
+                      ng-class="{'input-error': (registerForm.lg_fullname.$touched && registerForm.lg_fullname.$invalid) }"
+                       title="Tên đầy đủ là bắt buộc">
                     </div>
                   </div>
                   <button ng-click="signup()" type="submit" class="login-button"><i class="fa fa-arrow-right"></i></button>
