--- a/src/client/templates/dashboard.html
+++ b/src/client/templates/dashboard.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-lg-3 col-md-6 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-xs-12">
         <rd-widget>
             <rd-widget-body>
                 <div class="widget-icon green pull-left">
@@ -10,7 +10,7 @@
             </rd-widget-body>
         </rd-widget>
     </div>
-    <div class="col-lg-3 col-md-6 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-xs-12">
         <rd-widget>
             <rd-widget-body>
                 <div class="widget-icon red pull-left">
@@ -21,25 +21,25 @@
             </rd-widget-body>
         </rd-widget>
     </div>
-    <div class="col-lg-3 col-md-6 col-xs-12">
-        <rd-widget>
-            <rd-widget-body>
-                <div class="widget-icon orange pull-left">
-                    <i class="fa fa-sitemap"></i>
-                </div>
-                <div class="title">3</div>
-                <div class="comment">Admin</div>
-            </rd-widget-body>
-        </rd-widget>
-    </div>
-    <div class="col-lg-3 col-md-6 col-xs-12">
+     <div class="col-lg-6 col-md-6 col-xs-12">
         <rd-widget>
             <rd-widget-body>
                 <div class="widget-icon blue pull-left">
                     <i class="fa fa-support"></i>
                 </div>
                 <div class="title">10</div>
-                <div class="comment">Giải thưởng</div>
+                <div class="comment">Môn học</div>
+            </rd-widget-body>
+        </rd-widget>
+    </div>
+    <div class="col-lg-6 col-md-6 col-xs-12">
+        <rd-widget>
+            <rd-widget-body>
+                <div class="widget-icon orange pull-left">
+                    <i class="fa fa-user"></i>
+                </div>
+                <div class="title">3</div>
+                <div class="comment">Admin</div>
             </rd-widget-body>
         </rd-widget>
     </div>
