--- a/src/client/templates/login.html
+++ b/src/client/templates/login.html
@@ -60,8 +60,8 @@
             </div>
             <!-- end:Register Form -->
             <div class="etc-login-form">
-              <p ng-show="showLogin">Đăng kí mới? <a ng-click="showRegisterForm()" href="#">bấm vào đây</a></p>
-              <p ng-show="!showLogin"><a ng-click="showLoginForm()"  href="#">Quay lại</a></p>
+              <p ng-show="showLogin">Đăng kí mới? <a ng-click="showRegisterForm()" href="#">bấm vào đây</a>  <i class="fa fa-user-plus"></p>
+              <p ng-show="!showLogin"><a ng-click="showLoginForm()"  href="#"><i style="margin-right: 5px" class="fa fa-chevron-circle-left"></i>Quay lại</a></p>
             </div>
           </div>
       </div>
